# bq-readonly-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  publish.yml  scorecard.yml  security.yml
docs/: EDITOR_SETUP.md  PUBLISHING.md  QUICKSTART.md  TROUBLESHOOTING.md
docs/superpowers/plans/: 2026-04-26-bq-readonly-mcp-implementation.md
docs/superpowers/specs/: 2026-04-26-bq-readonly-mcp-design.md
mcp-config-examples/: cline.json  continue.json  copilot.json  cursor.json  zed.json
src/bq_readonly_mcp/: __init__.py  __main__.py  auth.py  bq.py  config.py  models.py  safety.py  server.py
src/bq_readonly_mcp/tools/: __init__.py  describe_columns.py  estimate_query_cost.py  get_table.py  get_table_metadata.py  list_datasets.py  list_tables.py  run_query.py
tests/: conftest.py
tests/integration/: test_public_datasets.py
tests/unit/: test_auth.py  test_bq_listing.py  test_bq_query.py  test_bq_tables.py  test_config.py  test_models.py  test_no_pii.py  test_package.py  test_safety_comments.py  test_safety_inject_limit.py  test_safety_limit_detect.py  test_safety_mask_strings.py  test_safety_multistatement.py  test_safety_validate.py  test_server.py  test_tool_describe_columns.py  test_tool_estimate_query_cost.py  test_tool_get_table.py  test_tool_get_table_metadata.py  test_tool_list_datasets.py  test_tool_list_tables.py  test_tool_run_query.py
