[project]
name = "bq-readonly-mcp"
version = "0.1.0"
description = "Read-only BigQuery MCP server with auto-LIMIT, dry-run cost guard, and ADC auth — for Claude, Cursor, Windsurf, Copilot, and other MCP clients."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Rupesh Biswas", email = "rupesh.biswas@mariadb.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mcp", "bigquery", "google-cloud", "llm", "ai", "anthropic", "claude", "cursor", "windsurf", "readonly", "adc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "google-cloud-bigquery>=3.20.0",
    "google-auth>=2.38.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "types-requests>=2.32.0",
]

[project.scripts]
bq-readonly-mcp = "bq_readonly_mcp.server:main"

[project.urls]
Homepage = "https://github.com/mariadb-RupeshBiswas/bq-readonly-mcp"
Repository = "https://github.com/mariadb-RupeshBiswas/bq-readonly-mcp"
Issues = "https://github.com/mariadb-RupeshBiswas/bq-readonly-mcp/issues"
Documentation = "https://github.com/mariadb-RupeshBiswas/bq-readonly-mcp#readme"
PyPI = "https://pypi.org/project/bq-readonly-mcp/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bq_readonly_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: integration tests that hit real BigQuery (require ADC, skipped in CI by default)",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
